Add dependency to javax.servlet

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>${confluence.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>    <!-- important! -->
+        </dependency>
     </dependencies>
 
     <build>
